# AdaptiveExecutor

./: README.md  __init__.py  pyproject.toml
adaptive_executor/: __init__.py  accounting.py  adaptive_executor.py  dtypes.py  errors.py  monitor.py  profiles.py  resolve.py  scheduling.py  worker.py
docs/: OVERVIEW.md
docs/features/: backfill-scheduling.md  executor.md  scheduler-sim.md
tests/: conftest.py  fakes.py  kill_task_fns.py  task_fns.py  test_accounting.py  test_backfill_integration.py  test_canary.py  test_cancellation.py  test_crash_floors.py  test_executor_pool.py  test_infeasible.py  test_input_aware_profiles.py  test_learning_loop.py  test_monitor_logging.py  test_observed_accounting.py  test_profiles.py  test_resolve.py  test_scheduling.py  test_scheduling_exclusive.py  test_smoke.py  test_worker_kill_isolation.py  test_worker_vram.py
tests/sim/: __init__.py  harness.py  task_stubs.py  test_exclusive_isolation.py  test_scheduler_properties.py  workloads.py
